--- a/erasmus.html
+++ b/erasmus.html
@@ -8,7 +8,7 @@
         <nav class="headerNav">
             Internationalisation @ Carrick
             <ul>
-                <li><a href="/ccs/internationalisation">Home</a></li>
+                <li><a href="/internationalisation">Home</a></li>
                 <li><a href="erasmus.html">Erasmus+</a></li>
                 <li><a href="#">eTwinning</a></li>
                 <li><a href="#">Blog</a></li>
