--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/global.css">
     </head>
@@ -14,7 +15,7 @@
             <div id="title">
                 <h1>
                     <img src="crest.png" alt="Carrick CS">
-                    Internationalisation @<br> Carrick CS
+                    Internationalisation @ Carrick CS
                 </h1>
                 <div id="desc">
                 This site records all transnational collaboration undertaken<br> by Community School Carrick-on-Shannon, County Leitrim, Ireland.
