--- a/erasmus.html
+++ b/erasmus.html
@@ -1,55 +1,55 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="css/erasmus.css">
-        <link rel="stylesheet" href="css/global.css">
-    </head>
-    <body>
-        <nav class="headerNav">
-            Internationalisation @ Carrick
-            <ul>
-                <li><a href="/internationalisation">Home</a></li>
-                <li><a href="erasmus.html">Erasmus+</a></li>
-                <li><a href="#">eTwinning</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">History</a></li>
-            </ul>
-        </nav>
-        <header>
-        Erasmus+
-        </header>
-        <main>
-            <section id="info">
-                <div>Erasmus+ is the European Commission's Programme for education, training, youth and sport for the period 2014–2020, succeeding the previous Lifelong Learning Programme (2007 - 2014).</div>
-                <div>As an integrated programme, Erasmus+ offers more opportunities for mobility of learners and staff and cooperation across the education, training and youth sectors and is easier to access than its predecessors, with simplified funding rules and a structure which aims to streamline the administration of the programme.</div>
-            </section>
-            <section id="links">
-                <a href="#">
+<html><head>
+    <link rel="stylesheet" href="css/erasmus.css">
+    <link rel="stylesheet" href="css/global.css">
+</head>
+<body>
+    <nav class="headerNav">
+        Internationalisation @ Carrick CS
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="erasmus.html">Erasmus+</a></li>
+            <li><a href="etwinning.html">eTwinning</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">History</a></li>
+        </ul>
+    </nav>
+    <header>
+    Erasmus+
+    </header>
+    <main>
+        <section id="top">
+            <div id="info">
+                <p>
+                Erasmus+ is the European Commission's Programme for education, training, youth and sport for the period 2014 &dash; 2020, succeeding the previous Lifelong Learning Programme (2007 - 2014).
+                </p>
+                <p>
+                As an integrated programme, Erasmus+ offers more opportunities for mobility of learners and staff and cooperation across the education, training and youth sectors and is easier to access than its predecessors, with simplified funding rules and a structure which aims to streamline the administration of the programme.
+                </p>
+            </div>
+            <a href="#" class="infoBox">
                     <div>
                         <h2>Erasmus+ KA101</h2>
-                        <div class"linkDesc">Celebrating Education through Creativity</div>
+                        <div class"linkdesc"="">Celebrating Education through Creativity</div>
                     </div>
-                </a>
-                <a href="#">
+                </a><a href="#" class="infoBox">
                     <div>
                         <h2>Erasmus+ KA219</h2>
-                        <div class"linkDesc">Celebrating Education</div>
+                        <div class"linkdesc"="">Celebrating Education</div>
                     </div>
-                </a>
-                <a href="#">
+                </a><a href="#" class="infoBox">
                     <div>
                         <h2>Erasmus+ KA101</h2>
-                        <div class"linkDesc">CarrickCS/SIC Ljubljana collaboration</div>
+                        <div class"linkdesc"="">CarrickCS/SIC Ljubljana collaboration</div>
                     </div>
-                </a>
-                <a href="#">
+                </a><a href="#" class="infoBox">
                     <div>
                         <h2>Erasmus+ Visiting teachers &amp; educationalists</h2>
                     </div>
-                </a>
-            </section>
-        </main>
-        
-    </body>
-</html>
+            </a>
+        </section>
+    </main>
+    
+
+
+</body></html>
