--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                     <ul>
                         <li><a href="erasmus.html">Erasmus+</a></li>
-                        <li><a href="#">eTwinning</a></li>
+                        <li><a href="etwinning.html">eTwinning</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">History</a></li>
