--- a/erasmus.html
+++ b/erasmus.html
@@ -8,7 +8,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="erasmus.html">Erasmus+</a></li>
-            <li><a href="etwinning.html">eTwinning</a></li>
+            <li><a href="etwinning">eTwinning</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">History</a></li>
