--- a/etwinning/index.html
+++ b/etwinning/index.html
@@ -1,15 +1,15 @@
 <html>
     <head> 
-        <link rel="stylesheet" href="css/erasmus.css"> 
-        <link rel="stylesheet" href="css/global.css"> 
+        <link rel="stylesheet" href="../css/erasmus.css"> 
+        <link rel="stylesheet" href="../css/global.css"> 
     </head> 
     <body> 
     <nav class="headerNav"> 
     Internationalisation @ Carrick CS 
         <ul> 
-            <li><a href="index.html">Home</a></li> 
-            <li><a href="erasmus.html">Erasmus+</a></li> 
-            <li><a href="etwinning.html">eTwinning</a></li> 
+            <li><a href="../index.html">Home</a></li> 
+            <li><a href="../erasmus.html">Erasmus+</a></li> 
+            <li><a href="">eTwinning</a></li> 
             <li><a href="#">Blog</a></li> 
             <li><a href="#">Contact</a></li> 
             <li><a href="#">History</a></li> 
@@ -30,12 +30,14 @@
                 </div>                
                     <a href="#" class="infoBox"> 
                     <div> 
-                        <h2>Celebrating Eudcation</h2> 
+                        <h2>Celebrating Education</h2> 
                         <div class="linkdesc">Celebrating Education through Creativity</div> 
                     </div> 
                     </a>
-                    <a href="#" class="infoBox"> 
-                    <div> </div>
+                    <a href="countryselector.html" class="infoBox"> 
+                    <div>
+                        <h2>EU Projects</h2>
+                    </div>
                     </a>
                     <a href="#" class="infoBox"> 
                     <div></div> 
