--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                     <ul>
                         <li><a href="erasmus.html">Erasmus+</a></li>
-                        <li><a href="etwinning.html">eTwinning</a></li>
+                        <li><a href="etwinning">eTwinning</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">History</a></li>
@@ -31,6 +31,10 @@
                 </nav>
             </div>
             <div id="erasmus-background"></div>
+            <!-- <footer>
+                Developed by Jason Gill &amp; Diarmuid Laydon<br>
+                &copy; Carrick-on-Shannon Community School 2019
+            </footer> -->
         </main>
     </body>
 </html>
