--- a/erasmus.html
+++ b/erasmus.html
@@ -1,6 +1,7 @@
 <html><head>
     <link rel="stylesheet" href="css/erasmus.css">
     <link rel="stylesheet" href="css/global.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <nav class="headerNav">
