--- a/etwinning/countryselector.html
+++ b/etwinning/countryselector.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="../css/erasmus.css"> 
         <link rel="stylesheet" href="../css/global.css">
         <link rel="stylesheet" href="../css/countryselector.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head> 
     <body> 
     <nav class="headerNav"> 
