--- a/etwinning/index.html
+++ b/etwinning/index.html
@@ -1,7 +1,8 @@
 <html>
     <head> 
         <link rel="stylesheet" href="../css/erasmus.css"> 
-        <link rel="stylesheet" href="../css/global.css"> 
+        <link rel="stylesheet" href="../css/global.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head> 
     <body> 
     <nav class="headerNav"> 
