--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>Carrick CS Internationalisation</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="crest.png">
         <link rel="stylesheet" href="css/global.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
